--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -9,7 +9,7 @@
         <div class="sidebar-header" style="padding-left: 16px; margin-top: 10%; margin-bottom: 5%" fxLayoutAlign="start center" fxLayoutGap="12px" fxLayout="row">
           <img height="36" src="../assets/sangana.png" />
           <div fxLayout="column" fxFlex fxLayoutAlign="center start">
-            <h4 style="padding: 0; margin: 0;">E Tuckshop</h4>
+            <h4 style="padding: 0; margin: 0;">e Inventory</h4>
             <span class="color-grey-500" style="font-size: 10px">Version 1.0</span>
           </div>
         </div>
