--- a/src/app/admins/admin-list/admin-list.component.html
+++ b/src/app/admins/admin-list/admin-list.component.html
@@ -22,8 +22,7 @@
         <!--    <h4>Formats</h4>-->
         <!--  </mat-toolbar-row>-->
         <button  mat-stroked-button
-                 color="primary"
-                 (click)="payrollTest()">
+                 color="primary">
           <mat-icon>add</mat-icon>Create
         </button>
         <button  mat-stroked-button
