--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -56,14 +56,14 @@
             <h3 matLine>No recent updates</h3>
           </mat-list-item>
 
-<!--          <mat-list-item>-->
-<!--            <mat-icon matListIcon class="color-green-500">blur_on</mat-icon>-->
-<!--            <button mat-raised-button mat-list-item (click)="generateQR('http://einventory.sanganaafrica.co.zw/public/api/allQR')"> Generate QRCODES </button>-->
-<!--          </mat-list-item>-->
           <mat-list-item>
             <mat-icon matListIcon class="color-green-500">blur_on</mat-icon>
-            <button mat-raised-button mat-list-item (click)="generateQR('http://127.0.0.1:8000/api/allQR')"> Generate QRCODES </button>
+            <button mat-raised-button mat-list-item (click)="generateQR('http://192.167.1.48/backend/eshop/public/api/allQR')"> Generate QRCODES </button>
           </mat-list-item>
+<!--          <mat-list-item>-->
+<!--            <mat-icon matListIcon class="color-green-500">blur_on</mat-icon>-->
+<!--            <button mat-raised-button mat-list-item (click)="generateQR('http://127.0.0.1:8000/api/allQR')"> Generate QRCODES </button>-->
+<!--          </mat-list-item>-->
         </mat-nav-list>
 
       </div>
