--- a/src/app/material/reports/cost/cost.component.html
+++ b/src/app/material/reports/cost/cost.component.html
@@ -1,7 +1,7 @@
 <div fxFill class="container" fxLayout="column" style="padding-left: 8px; padding-right: 8px;">
 
   <div class="topbar" fxLayout="row" fxLayoutAlign="start center">
-    <h3 class="color-blue-a700">Menu Detail</h3>
+    <h3 class="color-blue-a700">Cost per Department</h3>
 
   </div>
 
